--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.cocoduf.jsv</groupId>
-    <artifactId>json-schema-validator</artifactId>
+    <artifactId>json-schema-constraint-validator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
