--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.cocoduf.jsv</groupId>
+    <groupId>com.github.cocoduf</groupId>
     <artifactId>json-schema-constraint-validator</artifactId>
     <version>1.0.0</version>
 
